--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <strong>Dr. Soroush Mohandessi, M.D.</strong> is a Double-Boarded Psychiatrist (Adult in 2009 and Forensic in 2011) with a private practice in Portland, Oregon.  He is an expert in the diagnosis and treatment of psychiatric disorders.  Dr. Mohandessi provides clinical services to patients and forensic services to clients.<br />
 <br />
-Dr. Mohandessi has over seven years of experience treating patients.  He has conducted thousands of clinical interviews. Dr. Mohandessi has collaborated with nationally renowned experts in the fields of psychiatry and psychology. <br />
+Dr. Mohandessi has over 11 years of experience in psychiatry as a treating doctor and expert consultant. He has conducted thousands of clinical interviews, diagnostic evaluations and treatment assessments. In his clinically work, Dr. Mohandessi often coordinates with other doctors and therapists to provide treatment planning for his patients. In his concurrent forensic practice, he has worked with attorneys, courts, employers and other clients involved in a wide range of legal situations. He is also a frequent speaker at conferences, workshops and symposiums in the area. Over the past decade, Dr. Mohandessi has collaborated with nationally renowned experts in the fields of psychiatry and psychology. <br />
 <br />
 Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiatry at the Oregon Health &amp; Science University (OHSU).  He is an instructor in the Division of Psychiatry and the Law. He also holds a faculty appointment as Clinical Assistant Professor of Psychiatry at Western University of Health Sciences (WUHS).<br />
 <br />
@@ -59,11 +59,7 @@ Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiat
 
 </p>
 
-<p class="floatTwo narrow">
-
-
-<!--span id="new_patients"><strong>Now Accepting New Patients By Professional Referral</strong></span><br />
-<br /-->
+<div class="floatTwo narrow" style="margin-top: 25px;">
 
 <a href="clinical_details.html" class="more_info">New Patients &raquo; What to Expect</a>
 
@@ -71,13 +67,16 @@ Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiat
 Accepting Regence/BCBS, LifeWise and Self-pay
 
 <br /><br />
-<strong>Awarded 2012 Patients' Choice by patients on Vitals.com</strong>
+<strong>Awards &amp; Recognition</strong>
 <br style="clear:left;" />
-<!--a href="images/award-patients-choice.jpg" target="_blank" class="award"><img src="images/award-thumb-patients-choice.jpg" width="115" height="140" alt="Vitals: Patients Choice Award" /></a-->
-<a href="images/award-patients-choice.jpg" style="font-weight: normal; " target="_blank">View Patients' Choice Award</a>
-</p>
+<ul>
+	<li>Patients' Choice Award (2014)</li>
+	<li>Top 10 Doctor - State of Oregon, Psychiatrist (2014)</li>
+	<li>Top 10 Doctor - City of Portland, Psychiatrist (2014)</li>
+	<li>Patients' Choice Award (2012)</li>
+</ul>
 <br style="clear: both;" />
-
+</div>
 </div><!-- EOF #main_body -->
 
 </div><!-- EOF #wrapper -->
