Updated forensic services and Soroush photo.

--- a/forensic.html
+++ b/forensic.html
@@ -59,7 +59,7 @@ Dr. Mohandessi's forensic clients have included private and public attorneys, co
 
 <p class="floatTwo narrow">
 
-<img src="images/dr_mohandessi_suit.png" alt="Dr. Mohandessi" title="Dr. Mohandessi" /><br />
+<img src="images/dr_mohandessi_square.jpg" alt="Dr. Mohandessi" title="Dr. Mohandessi" /><br />
 Soroush Mohandessi, MD
 
 </p>
