--- a/forensic_services.html
+++ b/forensic_services.html
@@ -53,30 +53,39 @@ Dr. Mohandessi is a qualified forensic expert in state and federal courts includ
 	<li>The Circuit Court of the State of Oregon for Multnomah County</li>
 	<li>The Circuit Court of the State of Oregon for Marion County</li>
 	<li>The Circuit Court of the State of Oregon for Lane County</li>
+	<li>The Circuit Court of the State of Oregon for Douglas County</li>
+	<li>The Circuit Court of the State of Oregon for Malheur County</li>
+	<li>The Circuit Court of the State of Oregon for Washington County</li>
 	<li>The Superior Court of Sacramento County of the State of California</li>
 	<li>The United States District Court for the District of Eastern California</li>
 	<li>The United States District Court for the District of Oregon</li>
 </ul>
-	<p>He is also experienced in expert witness testimony.</p>
+<p>He is also experienced in expert witness testimony.</p>
 
 <p>
 Dr. Mohandessi uses a combination of clinical interviews, structured instruments and actuarial instruments to evaluate civil and criminal forensic cases.  Dr. Mohandessi's expertise including evaluations of the following issues:</p>
 
 <ul class="service_list">
-<li>Malingering of psychiatric illness</li>
-<li>Competency to stand trial </li>
-<li>Criminal responsibility </li>
-<li>Mitigation of sentencing </li>
-<li>Risk of future dangerousness and violence</li>
-<li>Testamentary capacity</li>
-<li>Psychiatric standard of care &amp; malpractice claims </li>
-<li>Habeas Corpus petitions</li>
-<li>Independent Medical Examinations (IMEs)</li>
-<li>Disability claims</li>
-<li>Fitness for duty</li>
-<li>Sexual harassment</li>
-<li>Internet addiction and Cyberstalking</li>
-<li>And other issues pertaining to mental illness and the law</li>
+	<li>Malingering of psychiatric illness</li>
+	<li>Competency to stand trial </li>
+	<li>Criminal responsibility </li>
+	<li>Mitigation of sentencing </li>
+	<li>Risk of future dangerousness and violence</li>
+	<li>Testamentary capacity</li>
+	<li>Psychiatric standard of care &amp; malpractice claims </li>
+	<li>Habeas Corpus petitions</li>
+	<li>Independent Medical Examinations (IMEs)</li>
+	<li>Disability claims</li>
+	<li>Fitness for duty</li>
+	<li>Sexual harassment</li>
+	<li>Internet addiction and Cyberstalking</li>
+	<li>Involuntary medication cases (Sell and Lopes orders)</li>
+	<li>Diminished capacity</li>
+	<li>Post-conviction relief</li>
+	<li>Personal injury</li>
+	<li>Psychic harm</li>
+	<li>Workers’ compensation</li>
+	<li>And other issues pertaining to mental illness and the law</li>
 </ul>
 
 <p>
