Added award header.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiat
 Accepting Regence/BCBS, LifeWise and Self-pay
 
 <br /><br />
-<strong>Awards &amp; Recognition</strong>
+<img src="images/award-header.png" class="no-border" />
 <br style="clear:left;" />
 <ul>
 	<li>Patients' Choice Award (2014)</li>
