Move to jekyll layout system. Add TypeScript. Add Webpack.

--- a/_index.html
+++ b/_index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Mohandessi Psych, LLC - Forensic Practice</title>
+<title>Mohandessi Psych, LLC - Home</title>
 
 <meta name="author" content="Ken Howard" />
 <meta name="keywords" content="psychiatry, psychiatric, portland oregon, forensic psychiatry, forensics, mohandessi, psychiatrist, psychiatrist portland, psychiatrist oregon, psychologist, expert witness, ocd, disorder, consultation, mental health" />
-<meta name="description" content="Mohandessi Psych, LLC is acceping new patients. We are located in the heart of the Pearl District in Portland, Oregon. Dr. Mohandessi is available for clinical and forensic psychiatry services." />
+<meta name="description" content="Located in Downtown Portland, Oregon. Dr. Mohandessi is available for clinical and forensic psychiatry services." />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 <link href="css/screen.css" rel="stylesheet" type="text/css" />
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="page_forensic">
+<body class="page_home">
 
 <div id="wrapper"><!-- BOF #wrapper -->
 
@@ -45,59 +45,41 @@
 
 <div id="main_body"><!-- BOF #main_body -->
 
-<h3>Forensic Services</h3>
+<p class="floatTwo wide">
 
-<p>
-Dr. Mohandessi is a qualified forensic expert in state and federal courts including:</p>
-<ul class="service_list">
-	<li>The Circuit Court of the State of Oregon for Multnomah County</li>
-	<li>The Circuit Court of the State of Oregon for Marion County</li>
-	<li>The Circuit Court of the State of Oregon for Lane County</li>
-	<li>The Circuit Court of the State of Oregon for Douglas County</li>
-	<li>The Circuit Court of the State of Oregon for Malheur County</li>
-	<li>The Circuit Court of the State of Oregon for Washington County</li>
-	<li>The Superior Court of Sacramento County of the State of California</li>
-	<li>The United States District Court for the District of Eastern California</li>
-	<li>The United States District Court for the District of Oregon</li>
-</ul>
-<p>He is also experienced in expert witness testimony.</p>
+<span class="left"><img src="images/pearl1.png" alt="View of the Pearl District from top of the Irving Street Lofts building" title="View of the Pearl District from top of the Irving Street Lofts building" /><br /></span>
 
-<p>
-Dr. Mohandessi uses a combination of clinical interviews, structured instruments and actuarial instruments to evaluate civil and criminal forensic cases.  Dr. Mohandessi's expertise including evaluations of the following issues:</p>
+<strong>Dr. Soroush Mohandessi, M.D.</strong> is a Double-Boarded Psychiatrist (Adult in 2009 and Forensic in 2011) with a private practice in Portland, Oregon.  He is an expert in the diagnosis and treatment of psychiatric disorders.  Dr. Mohandessi provides clinical services to patients and forensic services to clients.<br />
+<br />
+Dr. Mohandessi has over 11 years of experience in psychiatry as a treating doctor and expert consultant. He has conducted thousands of clinical interviews, diagnostic evaluations and treatment assessments. In his clinically work, Dr. Mohandessi often coordinates with other doctors and therapists to provide treatment planning for his patients. In his concurrent forensic practice, he has worked with attorneys, courts, employers and other clients involved in a wide range of legal situations. He is also a frequent speaker at conferences, workshops and symposiums in the area. Over the past decade, Dr. Mohandessi has collaborated with nationally renowned experts in the fields of psychiatry and psychology. <br />
+<br />
+Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiatry at the Oregon Health &amp; Science University (OHSU).  He is an instructor in the Division of Psychiatry and the Law. He also holds a faculty appointment as Clinical Assistant Professor of Psychiatry at Western University of Health Sciences (WUHS).<br />
+<br />
 
-<ul class="service_list">
-	<li>Malingering of psychiatric illness</li>
-	<li>Competency to stand trial </li>
-	<li>Criminal responsibility </li>
-	<li>Mitigation of sentencing </li>
-	<li>Risk of future dangerousness and violence</li>
-	<li>Testamentary capacity</li>
-	<li>Psychiatric standard of care &amp; malpractice claims </li>
-	<li>Habeas Corpus petitions</li>
-	<li>Independent Medical Examinations (IMEs)</li>
-	<li>Disability claims</li>
-	<li>Fitness for duty</li>
-	<li>Sexual harassment</li>
-	<li>Internet addiction and Cyberstalking</li>
-	<li>Involuntary medication cases (Sell and Lopes orders)</li>
-	<li>Diminished capacity</li>
-	<li>Post-conviction relief</li>
-	<li>Personal injury</li>
-	<li>Psychic harm</li>
-	<li>Workers’ compensation</li>
-	<li>And other issues pertaining to mental illness and the law</li>
-</ul>
 
-<p>
-<strong>If you have any questions or a potential consultation, please visit the <a href="forms.html">Forms section</a> and contact Dr. Mohandessi's Office.</strong>
 </p>
 
-<br class="clear" />
+<div class="floatTwo narrow" style="margin-top: 25px;">
 
+<a href="clinical_details.html" class="more_info">New Patients &raquo; What to Expect</a>
+
+<br /><br />
+Accepting Regence/BCBS, LifeWise and Self-pay
+
+<br /><br />
+<img src="images/award-header.png" class="no-border" />
+<br style="clear:left;" />
+<ul>
+	<li>Patients' Choice Award (2014)</li>
+	<li>Top 10 Doctor - State of Oregon, Psychiatrist (2014)</li>
+	<li>Top 10 Doctor - City of Portland, Psychiatrist (2014)</li>
+	<li>Patients' Choice Award (2012)</li>
+</ul>
+<br style="clear: both;" />
+</div>
 </div><!-- EOF #main_body -->
 
 </div><!-- EOF #wrapper -->
-
 
 <div id="footer"><!-- BOF #footer -->
 
