--- a/contact.html
+++ b/contact.html
@@ -1,120 +1,49 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>Mohandessi Psych, LLC - Contact</title>
+---
+layout: default
+permalink: /contact
+---
+<div class="row">
+	
+	<div class="column">
 
-<meta name="author" content="Ken Howard" />
-<meta name="keywords" content="psychiatry, psychiatric, portland oregon, forensic psychiatry, forensics, mohandessi, psychiatrist, psychiatrist portland, psychiatrist oregon, psychologist, expert witness, ocd, disorder, consultation, mental health" />
-<meta name="description" content="Mohandessi Psych, LLC is acceping new patients. We are located in the heart of the Pearl District in Portland, Oregon. Dr. Mohandessi is available for clinical and forensic psychiatry services." />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<h3>Contact</h3>
 
-<link href="css/screen.css" rel="stylesheet" type="text/css" />
-<script src="js/jquery.js" type="text/javascript"></script>
-<script src="js/linkhandler.js" type="text/javascript"></script>
+	</div>
 
-<!--[if lte IE 7]>
-<link href="css/ie.css" rel="stylesheet" type="text/css" />
-<![endif]-->
-
-</head>
-
-<body class="page_contact">
-
-<div id="wrapper"><!-- BOF #wrapper -->
-
-
-<div id="header"><!-- BOF #header -->
-
-<a href="index.html" id="logo_link" ><span>Mohandessi Psych, LLC<br />Soroush Mohandessi, M.D.</span></a>
-
-<p id="slogan"><span>Psychiatric Practice in the Heart of the Pearl - </span></p> <p id="portland"><span>Portland, Oregon</span></p>
-
-
-<div id="nav_links"><!-- BOF #nav_links -->
-<ul>
-	<li><a id="nav_home" href="index.html"><span>Home</span></a></li>
-	<li><a id="nav_clinical" href="clinical.html"><span>Clinical Practice</span></a></li>
-	<li><a id="nav_forensic" href="forensic.html"><span>Forensic Practice</span></a></li>
-	<li><a id="nav_resume" href="resume.html"><span>Resume</span></a></li>
-	<li><a id="nav_forms" href="forms.html"><span>Forms</span></a></li>
-	<li><a id="nav_contact" href="contact.html"><span>Contact</span></a></li>
-</ul>
-</div><!-- EOF #nav_links -->
-
-</div><!-- EOF #header -->
-
-<div id="main_body"><!-- BOF #main_body -->
-
-<h3>Contact</h3>
-
-<p class="floatTwo wide">
-
-<span class="left"><img src="images/molly.jpg" alt="Molly Sutter, Practice Manager, Mohandessi Psych, LLC" title="Molly Sutter, Practice Manager, Mohandessi Psych, LLC" /><br />
-Molly Sutter, Practice Manager, Mohandessi Psych, LLC</span>
-
-Dr. Mohandessi's office is located in the Medical Dental Building in Downtown Portland.
-
-
-
-<br />
-<br />Dr. Mohandessi is currently accepting new patients and welcomes referrals.<br />
-<br />
-
-<strong>
-833 SW 11th Ave, Suite 214<br />
-Portland, OR 97205<br />
-PHONE: (503) 481-9441<br />
-Fax: (503) 224-5951<br /><br />
-<a href="mailto:info@mohpsych.com">info@mohpsych.com</a>
-</strong>
-
-</p>
-
-<p class="floatTwo narrow">
-
-<span id="googlemap">
-<iframe width="250" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=833+SW+11th+Avenue&amp;oe=utf-8&amp;ie=UTF8&amp;gl=us&amp;ei=o83bSrOBKYLQsQOL9JCxCQ&amp;ved=0CA0Q8gEwAA&amp;t=h&amp;hq=&amp;hnear=833+SW+11th+Ave,+Portland,+Multnomah,+Oregon+97205&amp;ll=45.519248,-122.684069&amp;spn=0.011712,0.019119&amp;z=17&amp;iwloc=near&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=833+SW+11th+Avenue&amp;oe=utf-8&amp;ie=UTF8&amp;gl=us&amp;ei=o83bSrOBKYLQsQOL9JCxCQ&amp;ved=0CA0Q8gEwAA&amp;t=h&amp;hq=&amp;hnear=833+SW+11th+Ave,+Portland,+Multnomah,+Oregon+97205&amp;ll=45.519248,-122.684069&amp;spn=0.011712,0.019119,+Portland,+Multnomah,+Oregon+97209" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-</span>
-
-</p>
-
-<br class="clear" />
-
-</div><!-- EOF #main_body -->
-
-</div><!-- EOF #wrapper -->
-
-<div id="footer"><!-- BOF #footer -->
-
-<div id="footer_wrapper"><!-- BOF #footer_wrapper -->
-
-<div id="contact_block"><!-- BOF #contact_block -->
-
-<a id="directions" rel="external" href="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=833+SW+11th+Ave,+Suite+214,+Portland,+OR+97205&sll=45.519248,-122.684069&sspn=0.011712,0.019119&gl=us&ie=UTF8&hq=&hnear=833+SW+11th+Ave+%23214,+Portland,+Multnomah,+Oregon+97205&z=16"><span>Get Directions</span></a>
-<address>833 SW 11th Ave, Suite 214<br />Portland, OR 97205<br />PHONE: (503) 481-9441<br />FAX: (503) 224-5951</address>
-
-</div><!-- EOF #contact_block -->
-
-<div id="copyright">
-<p>
-&copy; 2014 Mohandessi Psych, LLC. All Rights Reserved<br />
-Web Design By <a href="http://www.simplicatedwebdesigns.com/">Simplicated Web Designs</a>
-</p>
 </div>
 
-</div><!-- EOF #footer_wrapper -->
+<div class="row">
 
-</div><!-- EOF #footer -->
+	<div class="medium-8 columns">
 
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-11349803-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</body>
+		<figure class="float-left show-for-medium">
+			<img src="/images/molly.jpg" alt="Molly Sutter, Practice Manager, Mohandessi Psych, LLC" title="Molly Sutter, Practice Manager, Mohandessi Psych, LLC"
+			/>
+			<figcaption style="width: 175px;">
+				Molly Sutter, Practice Manager, Mohandessi Psych, LLC
+			</figcaption>
+		</figure>
 
-</html>
+		<p>
+			Dr. Mohandessi's office is located in the Medical Dental Building in Downtown Portland.
+		</p>
+
+		<p>
+			Dr. Mohandessi is currently accepting new patients and welcomes referrals.
+		</p>
+
+		<address>
+			833 SW 11th Ave, Suite 214<br /> Portland, OR 97205<br />
+		</address>
+		PHONE: (503) 481-9441<br /> Fax: (503) 224-5951<br /><br />
+		<a href="mailto:info@mohpsych.com">info@mohpsych.com</a>
+
+	</div>
+
+	<div class="medium-4 columns">
+
+		<div class="flex-video">
+			<iframe width="250" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=833+SW+11th+Avenue&amp;oe=utf-8&amp;ie=UTF8&amp;gl=us&amp;ei=o83bSrOBKYLQsQOL9JCxCQ&amp;ved=0CA0Q8gEwAA&amp;t=h&amp;hq=&amp;hnear=833+SW+11th+Ave,+Portland,+Multnomah,+Oregon+97205&amp;ll=45.519248,-122.684069&amp;spn=0.011712,0.019119&amp;z=17&amp;iwloc=near&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=833+SW+11th+Avenue&amp;oe=utf-8&amp;ie=UTF8&amp;gl=us&amp;ei=o83bSrOBKYLQsQOL9JCxCQ&amp;ved=0CA0Q8gEwAA&amp;t=h&amp;hq=&amp;hnear=833+SW+11th+Ave,+Portland,+Multnomah,+Oregon+97205&amp;ll=45.519248,-122.684069&amp;spn=0.011712,0.019119,+Portland,+Multnomah,+Oregon+97209" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+		</div>
+
+	</div>
