--- a/clinical.html
+++ b/clinical.html
@@ -1,107 +1,47 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>Mohandessi Psych, LLC - Clinical Practice</title>
+---
+layout: default
+permalink: /clinical/index.html
+---
+<div class="row">
 
-<meta name="author" content="Ken Howard" />
-<meta name="keywords" content="psychiatry, psychiatric, portland oregon, forensic psychiatry, forensics, mohandessi, psychiatrist, psychiatrist portland, psychiatrist oregon, psychologist, expert witness, ocd, disorder, consultation, mental health" />
-<meta name="description" content="Mohandessi Psych, LLC is acceping new patients. We are located in the heart of the Pearl District in Portland, Oregon. Dr. Mohandessi is available for clinical and forensic psychiatry services." />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<div class="medium-8 columns">
 
-<link href="css/screen.css" rel="stylesheet" type="text/css" />
-<script src="js/jquery.js" type="text/javascript"></script>
-<script src="js/linkhandler.js" type="text/javascript"></script>
+		<p>
+			Dr. Mohandessi has based his private practice on the micro-practice model: lower overhead, fewer patients and greater availability
+			to his patients. Patients come to psychiatric treatment for various reasons including the sudden occurrence of crises
+			and the presence of lifelong issues. Most will seek relief of their symptoms and suffering. By creating an atmosphere
+			conducive to trust, self-exploration, insight and change, Dr. Mohandessi works with his patients to alleviate their symptoms
+			and enhance their mental well-being.
+		</p>
 
-<!--[if lte IE 7]>
-<link href="css/ie.css" rel="stylesheet" type="text/css" />
-<![endif]-->
+		<p>
+			Dr. Mohandessi is an expert in psychopharmacology and psychotherapy. In his practice, he utilizes both psychiatric medications
+			and talk therapies with an emphasis on fostering a strong therapeutic alliance. Dr. Mohandessi is trained and experienced
+			in supportive and insight-oriented psychotherapies, including cognitive-behavioral therapy (CBT), dialectical-behavioral
+			therapy (DBT) and psychodynamic psychotherapy (PD).
+		</p>
 
-</head>
+		<p>
+			Dr. Mohandessi is also available for Second-Opinion Consultation which does not include treatment. If you are already in
+			treatment with a psychiatrist, you or your psychiatrist can arrange for a Second-Opinion Consultation by calling Dr. Mohandessi's
+			office. Dr. Mohandessi will work with you and your psychiatrist to enhance your existing treatment.
+		</p>
 
-<body class="page_clinical">
+		<p>
+			<a href="/clinical/what-to-expect">More Information <strong>&raquo; What To Expect</strong></a>
+		</p>
 
-<div id="wrapper"><!-- BOF #wrapper -->
+	</div>
 
+	<div class="medium-4 columns">
 
-<div id="header"><!-- BOF #header -->
+		<figure>
+			<img src="/images/soroush.jpg" alt="Dr. Mohandessi" title="Dr. Mohandessi" />
+			<figcaption>
+				Soroush Mohandessi, MD
+			</figcaption>
+		</figure>
 
-<a href="index.html" id="logo_link" ><span>Mohandessi Psych, LLC<br />Soroush Mohandessi, M.D.</span></a>
+	</div>
 
-<p id="slogan"><span>Psychiatric Practice in the Heart of the Pearl - </span></p> <p id="portland"><span>Portland, Oregon</span></p>
-
-<div id="nav_links"><!-- BOF #nav_links -->
-<ul>
-	<li><a id="nav_home" href="index.html"><span>Home</span></a></li>
-	<li><a id="nav_clinical" href="clinical.html"><span>Clinical Practice</span></a></li>
-	<li><a id="nav_forensic" href="forensic.html"><span>Forensic Practice</span></a></li>
-	<li><a id="nav_resume" href="resume.html"><span>Resume</span></a></li>
-	<li><a id="nav_forms" href="forms.html"><span>Forms</span></a></li>
-	<li><a id="nav_contact" href="contact.html"><span>Contact</span></a></li>
-</ul>
-</div><!-- EOF #nav_links -->
-
-</div><!-- EOF #header -->
-
-<div id="main_body"><!-- BOF #main_body -->
-
-<p class="floatTwo wide">
-
-Dr. Mohandessi has based his private practice on the micro-practice model: lower overhead, fewer patients and greater availability to his patients.  Patients come to psychiatric treatment for various reasons including the sudden occurrence of crises and the presence of lifelong issues.  Most will seek relief of their symptoms and suffering.  By creating an atmosphere conducive to trust, self-exploration, insight and change, Dr. Mohandessi works with his patients to alleviate their symptoms and enhance their mental well-being.  <br />
-<br />
-Dr. Mohandessi is an expert in psychopharmacology and psychotherapy.  In his practice, he utilizes both psychiatric medications and talk therapies with an emphasis on fostering a strong therapeutic alliance.  Dr. Mohandessi is trained and experienced in supportive and insight-oriented psychotherapies, including cognitive-behavioral therapy (CBT), dialectical-behavioral therapy (DBT) and psychodynamic psychotherapy (PD).<br />
-<br />
-Dr. Mohandessi is also available for Second-Opinion Consultation which does not include treatment.  If you are already in treatment with a psychiatrist, you or your psychiatrist can arrange for a Second-Opinion Consultation by calling Dr. Mohandessi's office.  Dr. Mohandessi will work with you and your psychiatrist to enhance your existing treatment.<br />
-<br />
-
-<a href="clinical_details.html" class="more_info">More Information <strong>&raquo; What To Expect</strong>
-</a>
-
-</p>
-
-<p class="floatTwo narrow">
-
-<img src="images/soroush.jpg" alt="Dr. Mohandessi" title="Dr. Mohandessi" /><br />
-Soroush Mohandessi, MD
-
-</p>
-
-<br class="clear" />
-
-</div><!-- EOF #main_body -->
-
-</div><!-- EOF #wrapper -->
-
-<div id="footer"><!-- BOF #footer -->
-
-<div id="footer_wrapper"><!-- BOF #footer_wrapper -->
-
-<div id="contact_block"><!-- BOF #contact_block -->
-
-<a id="directions" rel="external" href="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=833+SW+11th+Ave,+Suite+214,+Portland,+OR+97205&sll=45.519248,-122.684069&sspn=0.011712,0.019119&gl=us&ie=UTF8&hq=&hnear=833+SW+11th+Ave+%23214,+Portland,+Multnomah,+Oregon+97205&z=16"><span>Get Directions</span></a>
-<address>833 SW 11th Ave, Suite 214<br />Portland, OR 97205<br />PHONE: (503) 481-9441<br />FAX: (503) 224-5951</address>
-
-</div><!-- EOF #contact_block -->
-
-<div id="copyright">
-<p>
-&copy; 2014 Mohandessi Psych, LLC. All Rights Reserved<br />
-Web Design By <a href="http://www.simplicatedwebdesigns.com/">Simplicated Web Designs</a>
-</p>
 </div>
-
-</div><!-- EOF #footer_wrapper -->
-
-</div><!-- EOF #footer -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-11349803-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</body>
-
-</html>
