--- a/clinical-what-to-expect.html
+++ b/clinical-what-to-expect.html
@@ -3,10 +3,24 @@ layout: default
 permalink: /clinical/what-to-expect
 ---
 <div class="row">
+	<div class="column">
+		<nav aria-label="You are here:" role="navigation">
+		<ul class="breadcrumbs">
+			<li><a href="/">Home</a></li>
+            <li><a href="/clinical">Clinical Practice</a></li>
+			<li>
+			<span class="show-for-sr">Current: </span> What To Expect
+			</li>
+		</ul>
+		</nav>
+	</div>
+</div>
+
+<div class="row">
 	
 	<div class="column">
 
-		<h1>What to Expect</h1>
+		<h1>What To Expect</h1>
 
 	</div>
 
