--- a/clinical.html
+++ b/clinical.html
@@ -3,6 +3,29 @@ layout: default
 permalink: /clinical/index.html
 ---
 <div class="row">
+	<div class="column">
+		<nav aria-label="You are here:" role="navigation">
+		<ul class="breadcrumbs">
+			<li><a href="/">Home</a></li>
+			<li>
+			<span class="show-for-sr">Current: </span> Clinical Practice
+			</li>
+		</ul>
+		</nav>
+	</div>
+</div>
+
+<div class="row">
+	
+	<div class="column">
+
+		<h1>Clinical Practice</h1>
+
+	</div>
+
+</div>
+
+<div class="row">
 
 	<div class="medium-8 columns">
 
@@ -27,9 +50,9 @@ permalink: /clinical/index.html
 			office. Dr. Mohandessi will work with you and your psychiatrist to enhance your existing treatment.
 		</p>
 
-		<p>
+		<div class="callout primary">
 			<a href="/clinical/what-to-expect">More Information <strong>&raquo; What To Expect</strong></a>
-		</p>
+		</div>
 
 	</div>
 
