--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,23 @@ layout: default
 permalink: /contact
 ---
 <div class="row">
+	<div class="column">
+		<nav aria-label="You are here:" role="navigation">
+		<ul class="breadcrumbs">
+			<li><a href="/">Home</a></li>
+			<li>
+			<span class="show-for-sr">Current: </span> Contact
+			</li>
+		</ul>
+		</nav>
+	</div>
+</div>
+
+<div class="row">
 	
 	<div class="column">
 
-		<h3>Contact</h3>
+		<h1>Contact</h1>
 
 	</div>
 
