--- a/index.html
+++ b/index.html
@@ -36,18 +36,20 @@ layout: default
 
     <div class="medium-4 columns">
 
-        <p><a href="/clinical-details">New Patients &raquo; What to Expect</a></p>
+        <div class="callout primary"><a href="/clinical-details">New Patients &raquo; What to Expect</a></div>
 
-        <p>Accepting Regence/BCBS, LifeWise and Self-pay</p>
+        <p><strong>Accepting Regence/BCBS, LifeWise and Self-pay</strong></p>
 
-        <p><img src="/images/award-header.png" /></p>
+        <div class="callout">
+            <h3 class="heading">Awards &amp; Recognition</h3>
 
-        <ul>
-            <li>Patients' Choice Award (2014)</li>
-            <li>Top 10 Doctor - State of Oregon, Psychiatrist (2014)</li>
-            <li>Top 10 Doctor - City of Portland, Psychiatrist (2014)</li>
-            <li>Patients' Choice Award (2012)</li>
-        </ul>
+            <ul>
+                <li>Patients' Choice Award (2014)</li>
+                <li>Top 10 Doctor - State of Oregon, Psychiatrist (2014)</li>
+                <li>Top 10 Doctor - City of Portland, Psychiatrist (2014)</li>
+                <li>Patients' Choice Award (2012)</li>
+            </ul>
+        </div
 
     </div>
 
